--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
 		"globals": "^16.0.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.0.0",
+		"svelte": "^5.25.3",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@sveltestrap/sveltestrap": "^7.1.0",
+		"jquery": "^3.7.1",
+		"svelte-mathquill": "^0.8.2"
 	}
 }
